# vmxmiddle

./: .gitignore  .gitmodules  Application.hs  Foundation.hs  Import.hs  Model.hs  README  README.md  Settings.hs  Setup.hs  VMXServerConfig.json  auto_build.sh  build_dmg.sh  build_mac.sh  cabal.config  cabal_build.sh  cabal_notes.txt  dbenter.sh  devel.hs  enter.sh  enter_withport.sh  go  index.html  killallsessions.sh  latest_vmxserver.sh  make_symlinks.sh  middle.cabal  middle.cabal.linux  middle.cabal.mac  middle.cabal.save  ship.sh  ship2.sh  startdb.sh  yesod_devel.sh
Handler/: ActivateLicense.hs  CheckLicense.hs  CreateModel.hs  EditModel.hs  Forward.hs  Home.hs  LoadModel.hs  LogModel.hs  ManageSession.hs  Model.hs  ModelDB.hs  ModelData.hs  ModelImage.hs  ModelViewer.hs  ProcessImage.hs  RandomImage.hs  SaveSession.hs  Session.hs  SessionConfig.hs  SessionParams.hs  SessionViewer.hs  StreamImages.hs  VideoViewer.hs  WebSocket.hs
Helper/: Redis.hs  Shared.hs  VMXTypes.hs
Settings/: StaticFiles.hs
apidocs/: rest.json  rest.yaml
apidocs/tests/: all.sh  clear_sessions.js  create_delete_loop.js  create_test_access.js  creation.js  google_maker.js  load_all.js  model_maker.js  vmxtester.js
app/: main.hs
config/: keter.yaml  models  postgresql.yml  routes  settings.yml  settings.yml.mac
corel/: vmxservernode.sh
deploy/: Procfile
deploy_scripts/node-git-fish/: index.js
deploy_scripts/vmxmiddle/: build.sh  dev.sh  stable.sh  tag.sh
mac_builder/: Info.plist  clean_libs.sh  compile.sh  download.sh  getVMXversion.sh  mac_builder.sh  mac_builder_small.sh  old.build_dmg.sh  run.sh  settings.tom.yml  settings.yml  upload.sh
mac_builder/mac_files/: Info.plist  run.sh  settings.yml
resources/: vmxicon.icns  vmxicon2.icns
scripts/: download_models.sh  import_models.sh  update.sh  upload_model.sh
static/css/: app.css  lavish-bootstrap.css  vmx-animations.css  vmx-bootstrap-override.css
static/js/: angular-ui-router.js  dat.gui.min.js  demo_tracker.js  jsfeat.js  profiler.js  server.js  template.server  tracker.js  ui-bootstrap-tpls-0.6.0.js  vmx-directives.js  vmx-functional.js  vmx-services.js  vmx.js  youtube-video.js
static/js/ace/: ext-language_tools.js
static/js/angular-websocket/: package.json
static/js/services/: vmxconnections.js  vmxmodels.js  vmxwebsocket.js
static/partial/: detector-thumbnail.html  editor-pane.html  external_src_modal.html  file_create_modal.html  git-pane.html  model_modal.html  modeler-exemplar.html  modeler_modal.html  new_app_model.html  overlay-available-detectors.html  overlay-content.html  overlay-debug-panel.html  overlay-detector-params-param.html  overlay-detector-params.html  overlay-model-overlay.html  overlay-running-detectors.html  overlay-toolbar.html  overlay.html  tracker.html  video-canvas.html  vmxapi-magic-canvas-modal.html
static3/: bower_components  docs  models.html  partial  sessions.html
tests/: create_session.sh  create_sessions.sh  hit2.sh  hit_params.sh  hit_sessions.sh  load_loop.sh
