name:              middle
version:           0.0.2
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: .
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Session
                     Handler.ProcessImage
                     Handler.SessionParams
                     Handler.EditModel
                     Handler.Model
                     Handler.ModelImage
                     Handler.ModelData
                     Handler.ModelViewer
                     Handler.SessionViewer
                     Handler.VideoViewer
                     Handler.RandomImage
                     Handler.CheckLicense
                     Handler.ActivateLicense
                     Handler.LoadModel
                     Handler.LogModel
                     Handler.StreamImages
                     Handler.Forward
                     Handler.SaveSession
                     --Handler.Login
                     --Handler.ModelDB
                     Helper.Shared
                     Helper.VMXTypes

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0 
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                RankNTypes
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                     > 2.1        && < 3.0    
                 , persistent-template           >= 1.3
                 , persistent-postgresql         >= 1.3
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.4
                 , wai-logger                    >= 2.2        && < 2.3
                 , wai
                 -- everything past this comment is beyond pure yesod
                 , process                      
                 , unix                      
                 , uuid                      
                 , base64-bytestring
                 , gd
                 , split
                 , MissingH
                 , stm
                 , syb
                 , unordered-containers
                 , containers
                 , http-types
                 , filepath
                 , random
                 , conduit-extra                    >=  1.1
                 , aeson-pretty
                 , streaming-commons
                 , network
                 , connection
                 , HTTP
                 , lifted-base
                 , time



executable         middle
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , middle
                     , yesod
                     , directory
                     , filepath
                     , monad-control
                     , mtl
                     , conduit-extra
    ghc-options:       -threaded -O2 



test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , middle
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
                 , MissingH
                 , unordered-containers
